# aimada

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.nebius.yml  docker-compose.yml  pytest.ini
backend/: Dockerfile  README.md  compose-entrypoint.sh  pyproject.toml
backend/app/: config.py  main.py  metrics.py  runtime_smoke.py
backend/app/agents/: base.py  layering_like.py  liquidity_evaporation.py  liquidity_taker.py  market_maker.py  noise_trader.py  panic_selloff.py  quote_stuffing.py  quote_stuffing_like.py  runtime.py  spoofing_like.py
backend/app/api/: routes_arena.py  routes_auth.py  routes_benchmark.py  routes_data_ingestion.py  routes_experiments.py  routes_explain.py  routes_incidents.py  routes_kernel.py  routes_nebius.py  routes_red_team.py  routes_scenarios.py  routes_simulation.py
backend/app/arena/: clock.py  engine.py  java_client.py  live_runtime.py  scenario_controller.py  state.py
backend/tests/: exchange_proto_fixtures.py  test_agent_runtime.py  test_arena_engine.py  test_arena_exchange_events_api.py  test_auth_persona.py  test_canonical_hashing.py  test_compose_configuration.py  test_dependency_security_floors.py  test_detector_tournament.py  test_detectors.py  test_determinism_contract.py  test_differential_parity.py  test_evaluation_contract.py  test_exchange_event_log.py  test_exchange_event_schemas.py  test_exchange_event_sources.py  test_exchange_proto_contract.py  test_exchange_stream_persistence.py  test_experiments_persistence.py  test_freeze_release_script.py  test_golden_parity_corpus.py  test_grader_contract.py  test_grpc_reference.py  test_historical_replay_comparison.py  test_hybrid_data_validation.py  test_incidents.py  test_java_arena_client.py  test_jury_evidence_export.py  test_kernel_api.py  test_kernel_authority.py  test_liquidity_evaporation_determinism.py  test_live_runtime.py  test_lobster_ingestion.py  test_local_store.py  test_matching_engine.py  test_metrics.py  test_nebius_env_config.py  test_nebius_evidence_archive.py  test_nebius_job_config_rendering.py  test_nebius_job_submit_adapter.py  (+15 more)
(+583 files in other folders)
