[project]
name = "ai-market-abuse-detection-arena-backend"
version = "0.1.0"
description = "FastAPI backend and synthetic market simulation for AI Market Abuse Detection Arena."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "google-auth>=2.29.0",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pytest>=8.2.0",
  "python-dotenv>=1.0.0",
  "requests>=2.32.0",
  "pyyaml>=6.0.0",
  "uvicorn[standard]>=0.30.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
