[project]
name = "lob-arena-backend"
version = "0.1.0"
description = "Adversarial synthetic market simulation for surveillance benchmarking."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.14.2",
  "pytest>=8.2.0",
  "python-dotenv>=1.0.0",
  "requests>=2.32.0",
  "starlette>=1.3.1",
  "pyyaml>=6.0.0",
  "uvicorn[standard]>=0.30.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "langgraph>=0.2.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
