[project]
name = "lob-arena-backend"
version = "0.1.0"
description = "Adversarial synthetic market simulation for surveillance benchmarking."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.14.2",
  "python-dotenv>=1.0.0",
  "starlette>=1.3.1",
  "pyyaml>=6.0.0",
  "uvicorn>=0.30.0",
  "uvloop>=0.22.1",
  "httptools>=0.7.1",
  "websockets>=15.0.1",
  "protobuf>=7.35.1",
  "grpcio>=1.82.1",
]

[tool.pytest.ini_options]
pythonpath = [".", ".."]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "grpcio-tools>=1.82.1",
  "langgraph>=0.2.0",
  "pytest>=8.2.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
